src/renderer/views/MainRouteRenderer.scss
/* ... */
.node-type-r {
    fill: $c-router;
    background-color: $c-router;
}

.node-type-e {
    fill: $c-eth;
    background-color: $c-eth;
}

.node-type-p {
    fill: $c-pcix;
    background-color: $c-pcix;
}

.node-type {
    border-bottom: 2px solid transparent;

    &.detailed-view {
        border-bottom: 2px solid $bright-highlight;
    }
}

.main-route {
    // This is a CSS variable because the value is set dynamically in react.
    --js-bottom-dock-height: $initial-dock-height;

    display: grid;
    grid-template-columns: $sidebar-width $controls-panel-width min-content 1fr;
    grid-template-rows: $top-bar-height auto;
    grid-template-areas:
        "top-bar top-bar top-bar top-bar"
        "sidebar controls main properties";
    gap: 10px;
    padding: 10px;
    height: 100vh;
    width: 100vw;

    .header {
        grid-area: top-bar;
        margin: 0;
    }

    .sidebar { grid-area: sidebar; }
    .grid-sidebar {
        grid-area: controls;
        position: relative;
    }
    .main-content {
        max-width: 50vw;
        width: fit-content;
        grid-area: main;
        overflow: auto;
    }
    .properties-panel {
        min-width: $properties-panel-width;
        grid-area: properties;
        position: relative;
    }

    .bottom-dock {
        grid-area: bottom-dock;
        display: none;
        height: $initial-dock-height;
        align-self: end;
    }

    .main-route-loading-overlay {
        grid-area: main;
        background: $tt-background;
        display: grid;
        place-items: center;
        z-index: calc(infinity * 1);
        opacity: 0;
        pointer-events: none;
        user-select: none;
        transition: all 0.25s ease-in-out;
        font-size: larger;
        width: 50vw;
    }

    .panel-overlay {
        position: absolute;
        inset: 0;
        background: color-mix(in srgb, $tt-background 80%, transparent);
        display: none;
    }

    &.loading-data {
        .main-route-loading-overlay {
            opacity: 1;
            pointer-events: all;
        }

        .main-content { display: none; }

        .panel-overlay { display: block; }
    }

    &:has( .detailed-view-open) {
        grid-template-rows: $top-bar-height auto var(--js-bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock properties"
        ;
    }

    &:has( .dock-open) {
        grid-template-rows: $top-bar-height auto var(--js-bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock bottom-dock"
        ;

        .bottom-dock { display: block; }
    }

    &.invalid-data {
        .main-content {
            text-align: center;
            justify-self: center;
            align-self: center;
            margin-block-start: -$top-bar-height;

            p {
                margin-block: 20px;
                font-size: larger;
            }

            svg {
                color: $tt-yellow;
            }
        }

        .panel-overlay { display: block; }
    }

    @media (max-width: 1280px) {
        // Make the properties bar have a fixed width on smaller sizes without creating horizontal scrollbars
        grid-template-columns: $sidebar-width $controls-panel-width auto calc($properties-panel-width + 30px);

        .main-content { width: auto; }
    }
}

.main-wrapper {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.main-container {
    display: flex;
    gap: 50px;
    width: calc(100% - 100px);
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.inner-sidebar {
    // max-height: calc(100vh - 100px);
    overflow-y: auto;
    scrollbar-gutter: stable;
    min-width: 220px;
    overflow-x: hidden;

    .inner-sidebar-wrap {
        display: flex;
        flex-direction: column;
        margin-inline: 10px 20px;

        .congestion-legend {
            width: calc(100% - 10px);
            height: 3px;
            margin-bottom: 2px;
        }

        .bp4-slider {
            width: calc(100% - 10px);
        }
    }

    hr {
        border: none;
        width: 100%;
        border-top: 1px solid $hr;

    }

    .bp4-numeric-input {
        .bp4-input-group {
            max-width: 150px;
        }
    }
}
/* ... */

